// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NowApplicationDocumentSearch renders in indexing state 1`] = `
<div>
  <section
    class="ant-layout permit-search__layout"
  >
    <main
      class="ant-layout-content permit-search__content"
    >
      <div
        class="ant-row ant-row-end"
        style="margin-bottom: 8px;"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
            style="margin-right: 8px;"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                <span
                  class="ant-tag ant-tag-processing"
                >
                  <span
                    aria-label="sync"
                    class="anticon anticon-sync"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      class="anticon-spin"
                      data-icon="sync"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M168 504.2c1-43.7 10-86.1 26.9-126 17.3-41 42.1-77.7 73.7-109.4S337 212.3 378 195c42.4-17.9 87.4-27 133.9-27s91.5 9.1 133.8 27A341.5 341.5 0 01755 268.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.7 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c0-6.7-7.7-10.5-12.9-6.3l-56.4 44.1C765.8 155.1 646.2 92 511.8 92 282.7 92 96.3 275.6 92 503.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8zm756 7.8h-60c-4.4 0-7.9 3.5-8 7.8-1 43.7-10 86.1-26.9 126-17.3 41-42.1 77.8-73.7 109.4A342.45 342.45 0 01512.1 856a342.24 342.24 0 01-243.2-100.8c-9.9-9.9-19.2-20.4-27.8-31.4l60.2-47a8 8 0 00-3-14.1l-175.7-43c-5-1.2-9.9 2.6-9.9 7.7l-.7 181c0 6.7 7.7 10.5 12.9 6.3l56.4-44.1C258.2 868.9 377.8 932 512.2 932c229.2 0 415.5-183.7 419.8-411.8a8 8 0 00-8-8.2z"
                      />
                    </svg>
                  </span>
                  <span>
                    Indexing…
                  </span>
                </span>
              </div>
              <div
                class="ant-space-item"
              >
                <div
                  class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-small"
                  role="progressbar"
                  style="width: 140px; margin-bottom: 0px;"
                >
                  <div
                    class="ant-progress-outer"
                  >
                    <div
                      class="ant-progress-inner"
                    >
                      <div
                        class="ant-progress-bg"
                        style="width: 45%; height: 6px;"
                      />
                    </div>
                  </div>
                  <span
                    class="ant-progress-text"
                    title="45%"
                  >
                    45%
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-space-item"
          >
            <button
              aria-label="Cancel"
              class="ant-btn ant-btn-primary ant-btn-dangerous core-btn core-btn-primary form-btn margin-none"
              type="button"
            >
              <span>
                Cancel
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-row-center ant-row-middle"
      >
        <div
          class="ant-col ant-col-xs-24"
          style="max-width: 900px;"
        >
          <div
            class="ant-row"
            style="margin-top: -12px; margin-bottom: -12px;"
          >
            <div
              class="ant-col ant-col-xs-24"
              style="padding-top: 12px; padding-bottom: 12px; text-align: center;"
            >
              <h1
                class="ant-typography"
              >
                Search Application Documents
              </h1>
              <div
                class="ant-typography"
                style="font-size: 16px;"
              >
                Search across all documents submitted with this Notice of Work application and get AI-powered answers. Try searching for specific plans, assessments, or operational details.
              </div>
              <div
                class="ant-typography"
              >
                <div
                  class="ant-alert ant-alert-warning ant-alert-with-description"
                  data-show="true"
                  role="alert"
                >
                  <span
                    aria-label="exclamation-circle"
                    class="anticon anticon-exclamation-circle ant-alert-icon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="exclamation-circle"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                      />
                      <path
                        d="M464 688a48 48 0 1096 0 48 48 0 10-96 0zm24-112h48c4.4 0 8-3.6 8-8V296c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8z"
                      />
                    </svg>
                  </span>
                  <div
                    class="ant-alert-content"
                  >
                    <div
                      class="ant-alert-description"
                    >
                      Note: Spatial files (e.g. shapefiles) are not indexed and will not appear in search results.
                    </div>
                  </div>
                </div>
              </div>
              <div />
            </div>
            <div
              class="ant-col ant-col-xs-24"
              style="padding-top: 12px; padding-bottom: 12px; text-align: center; margin-top: 24px;"
            >
              <h4
                class="ant-typography"
                style="margin-bottom: 32px;"
              >
                Try these example searches
              </h4>
            </div>
          </div>
          <div
            class="ant-row"
            style="margin-top: -12px; margin-bottom: -12px;"
          >
            <div
              class="ant-col ant-col-xs-24 ant-col-sm-12"
              style="margin-bottom: 24px; padding: 0px 20px;"
            >
              <div
                class="ant-card ant-card-bordered ant-card-hoverable"
                style="height: 100%;"
              >
                <div
                  class="ant-card-body"
                  style="height: 100%;"
                >
                  <div
                    class="ant-row"
                    style="margin-top: -8px; margin-bottom: -8px;"
                  >
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 8px; padding-bottom: 8px;"
                    >
                      <div
                        class="ant-row ant-row-middle"
                        style="margin-left: -4px; margin-right: -4px;"
                      >
                        <span
                          aria-label="aim"
                          class="anticon anticon-aim"
                          role="img"
                          style="font-size: 24px;"
                        >
                          <svg
                            aria-hidden="true"
                            class=""
                            data-icon="aim"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <defs>
                              <style />
                            </defs>
                            <path
                              d="M952 474H829.8C812.5 327.6 696.4 211.5 550 194.2V72c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v122.2C327.6 211.5 211.5 327.6 194.2 474H72c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h122.2C211.5 696.4 327.6 812.5 474 829.8V952c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V829.8C696.4 812.5 812.5 696.4 829.8 550H952c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8zM512 756c-134.8 0-244-109.2-244-244s109.2-244 244-244 244 109.2 244 244-109.2 244-244 244z"
                            />
                            <path
                              d="M512 392c-32.1 0-62.1 12.4-84.8 35.2-22.7 22.7-35.2 52.7-35.2 84.8s12.5 62.1 35.2 84.8C449.9 619.4 480 632 512 632s62.1-12.5 84.8-35.2C619.4 574.1 632 544 632 512s-12.5-62.1-35.2-84.8A118.57 118.57 0 00512 392z"
                            />
                          </svg>
                        </span>
                        <div
                          class="ant-col"
                          style="padding-left: 4px; padding-right: 4px;"
                        >
                          <span
                            class="ant-typography"
                          >
                            <strong>
                              Activies & Scope
                            </strong>
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 8px; padding-bottom: 8px;"
                    >
                      <div
                        class="ant-row"
                        style="margin-top: -4px; margin-bottom: -4px;"
                      >
                        <div
                          class="ant-col ant-col-xs-24"
                          style="padding-top: 4px; padding-bottom: 4px;"
                        >
                          <a
                            class="ant-typography permit-search__example-link"
                          >
                            What is the timeline of the proposed activies?
                          </a>
                        </div>
                        <div
                          class="ant-col ant-col-xs-24"
                          style="padding-top: 4px; padding-bottom: 4px;"
                        >
                          <a
                            class="ant-typography permit-search__example-link"
                          >
                            What activites are planned (e.g. drilling, trenching)?
                          </a>
                        </div>
                        <div
                          class="ant-col ant-col-xs-24"
                          style="padding-top: 4px; padding-bottom: 4px;"
                        >
                          <a
                            class="ant-typography permit-search__example-link"
                          >
                            How much land disturbance is proposed?
                          </a>
                        </div>
                        <div
                          class="ant-col ant-col-xs-24"
                          style="padding-top: 4px; padding-bottom: 4px;"
                        >
                          <a
                            class="ant-typography permit-search__example-link"
                          >
                            What approvals, permits or authorizations are identified or may be required?
                          </a>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-xs-24 ant-col-sm-12"
              style="margin-bottom: 24px; padding: 0px 20px;"
            >
              <div
                class="ant-card ant-card-bordered ant-card-hoverable"
                style="height: 100%;"
              >
                <div
                  class="ant-card-body"
                  style="height: 100%;"
                >
                  <div
                    class="ant-row"
                    style="margin-top: -8px; margin-bottom: -8px;"
                  >
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 8px; padding-bottom: 8px;"
                    >
                      <div
                        class="ant-row ant-row-middle"
                        style="margin-left: -4px; margin-right: -4px;"
                      >
                        <span
                          aria-label="environment"
                          class="anticon anticon-environment"
                          role="img"
                          style="font-size: 24px;"
                        >
                          <svg
                            aria-hidden="true"
                            class=""
                            data-icon="environment"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M854.6 289.1a362.49 362.49 0 00-79.9-115.7 370.83 370.83 0 00-118.2-77.8C610.7 76.6 562.1 67 512 67c-50.1 0-98.7 9.6-144.5 28.5-44.3 18.3-84 44.5-118.2 77.8A363.6 363.6 0 00169.4 289c-19.5 45-29.4 92.8-29.4 142 0 70.6 16.9 140.9 50.1 208.7 26.7 54.5 64 107.6 111 158.1 80.3 86.2 164.5 138.9 188.4 153a43.9 43.9 0 0022.4 6.1c7.8 0 15.5-2 22.4-6.1 23.9-14.1 108.1-66.8 188.4-153 47-50.4 84.3-103.6 111-158.1C867.1 572 884 501.8 884 431.1c0-49.2-9.9-97-29.4-142zM512 880.2c-65.9-41.9-300-207.8-300-449.1 0-77.9 31.1-151.1 87.6-206.3C356.3 169.5 431.7 139 512 139s155.7 30.5 212.4 85.9C780.9 280 812 353.2 812 431.1c0 241.3-234.1 407.2-300 449.1zm0-617.2c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm79.2 255.2A111.6 111.6 0 01512 551c-29.9 0-58-11.7-79.2-32.8A111.6 111.6 0 01400 439c0-29.9 11.7-58 32.8-79.2C454 338.6 482.1 327 512 327c29.9 0 58 11.6 79.2 32.8C612.4 381 624 409.1 624 439c0 29.9-11.6 58-32.8 79.2z"
                            />
                          </svg>
                        </span>
                        <div
                          class="ant-col"
                          style="padding-left: 4px; padding-right: 4px;"
                        >
                          <span
                            class="ant-typography"
                          >
                            <strong>
                              Environment & Reclaimation
                            </strong>
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 8px; padding-bottom: 8px;"
                    >
                      <div
                        class="ant-row"
                        style="margin-top: -4px; margin-bottom: -4px;"
                      >
                        <div
                          class="ant-col ant-col-xs-24"
                          style="padding-top: 4px; padding-bottom: 4px;"
                        >
                          <a
                            class="ant-typography permit-search__example-link"
                          >
                            What environmental considerations are identified?
                          </a>
                        </div>
                        <div
                          class="ant-col ant-col-xs-24"
                          style="padding-top: 4px; padding-bottom: 4px;"
                        >
                          <a
                            class="ant-typography permit-search__example-link"
                          >
                            What reclaimation activities are planned?
                          </a>
                        </div>
                        <div
                          class="ant-col ant-col-xs-24"
                          style="padding-top: 4px; padding-bottom: 4px;"
                        >
                          <a
                            class="ant-typography permit-search__example-link"
                          >
                            How will water runoff be managed?
                          </a>
                        </div>
                        <div
                          class="ant-col ant-col-xs-24"
                          style="padding-top: 4px; padding-bottom: 4px;"
                        >
                          <a
                            class="ant-typography permit-search__example-link"
                          >
                            Are any environmental management or monitoring plans included?
                          </a>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-xs-24 ant-col-sm-12"
              style="margin-bottom: 24px; padding: 0px 20px;"
            >
              <div
                class="ant-card ant-card-bordered ant-card-hoverable"
                style="height: 100%;"
              >
                <div
                  class="ant-card-body"
                  style="height: 100%;"
                >
                  <div
                    class="ant-row"
                    style="margin-top: -8px; margin-bottom: -8px;"
                  >
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 8px; padding-bottom: 8px;"
                    >
                      <div
                        class="ant-row ant-row-middle"
                        style="margin-left: -4px; margin-right: -4px;"
                      >
                        <span
                          aria-label="audit"
                          class="anticon anticon-audit"
                          role="img"
                          style="font-size: 24px;"
                        >
                          <svg
                            aria-hidden="true"
                            class=""
                            data-icon="audit"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M296 250c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H296zm184 144H296c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8zm-48 458H208V148h560v320c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V108c0-17.7-14.3-32-32-32H168c-17.7 0-32 14.3-32 32v784c0 17.7 14.3 32 32 32h264c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm440-88H728v-36.6c46.3-13.8 80-56.6 80-107.4 0-61.9-50.1-112-112-112s-112 50.1-112 112c0 50.7 33.7 93.6 80 107.4V764H520c-8.8 0-16 7.2-16 16v152c0 8.8 7.2 16 16 16h352c8.8 0 16-7.2 16-16V780c0-8.8-7.2-16-16-16zM646 620c0-27.6 22.4-50 50-50s50 22.4 50 50-22.4 50-50 50-50-22.4-50-50zm180 266H566v-60h260v60z"
                            />
                          </svg>
                        </span>
                        <div
                          class="ant-col"
                          style="padding-left: 4px; padding-right: 4px;"
                        >
                          <span
                            class="ant-typography"
                          >
                            <strong>
                              Engagement
                            </strong>
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 8px; padding-bottom: 8px;"
                    >
                      <div
                        class="ant-row"
                        style="margin-top: -4px; margin-bottom: -4px;"
                      >
                        <div
                          class="ant-col ant-col-xs-24"
                          style="padding-top: 4px; padding-bottom: 4px;"
                        >
                          <a
                            class="ant-typography permit-search__example-link"
                          >
                            What indigenous engagement has been completed or documented?
                          </a>
                        </div>
                        <div
                          class="ant-col ant-col-xs-24"
                          style="padding-top: 4px; padding-bottom: 4px;"
                        >
                          <a
                            class="ant-typography permit-search__example-link"
                          >
                            Are there any identified cultural or heritage considerations?
                          </a>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-xs-24 ant-col-sm-12"
              style="margin-bottom: 24px; padding: 0px 20px;"
            >
              <div
                class="ant-card ant-card-bordered ant-card-hoverable"
                style="height: 100%;"
              >
                <div
                  class="ant-card-body"
                  style="height: 100%;"
                >
                  <div
                    class="ant-row"
                    style="margin-top: -8px; margin-bottom: -8px;"
                  >
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 8px; padding-bottom: 8px;"
                    >
                      <div
                        class="ant-row ant-row-middle"
                        style="margin-left: -4px; margin-right: -4px;"
                      >
                        <span
                          aria-label="file-search"
                          class="anticon anticon-file-search"
                          role="img"
                          style="font-size: 24px;"
                        >
                          <svg
                            aria-hidden="true"
                            class=""
                            data-icon="file-search"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M688 312v-48c0-4.4-3.6-8-8-8H296c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8zm-392 88c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H296zm144 452H208V148h560v344c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V108c0-17.7-14.3-32-32-32H168c-17.7 0-32 14.3-32 32v784c0 17.7 14.3 32 32 32h272c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm445.7 51.5l-93.3-93.3C814.7 780.7 828 743.9 828 704c0-97.2-78.8-176-176-176s-176 78.8-176 176 78.8 176 176 176c35.8 0 69-10.7 96.8-29l94.7 94.7c1.6 1.6 3.6 2.3 5.6 2.3s4.1-.8 5.6-2.3l31-31a7.9 7.9 0 000-11.2zM652 816c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
                            />
                          </svg>
                        </span>
                        <div
                          class="ant-col"
                          style="padding-left: 4px; padding-right: 4px;"
                        >
                          <span
                            class="ant-typography"
                          >
                            <strong>
                              Operations
                            </strong>
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 8px; padding-bottom: 8px;"
                    >
                      <div
                        class="ant-row"
                        style="margin-top: -4px; margin-bottom: -4px;"
                      >
                        <div
                          class="ant-col ant-col-xs-24"
                          style="padding-top: 4px; padding-bottom: 4px;"
                        >
                          <a
                            class="ant-typography permit-search__example-link"
                          >
                            What equipment and machinery are proposed for the work?
                          </a>
                        </div>
                        <div
                          class="ant-col ant-col-xs-24"
                          style="padding-top: 4px; padding-bottom: 4px;"
                        >
                          <a
                            class="ant-typography permit-search__example-link"
                          >
                            Are there any high-risk activies (e.g. blasting) proposed?
                          </a>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
  </section>
</div>
`;

exports[`NowApplicationDocumentSearch renders results when they exist 1`] = `
<div>
  <section
    class="ant-layout permit-search__layout"
  >
    <main
      class="ant-layout-content permit-search__content"
    >
      <div
        class="ant-row ant-row-end"
        style="margin-bottom: 8px;"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
            style="margin-right: 8px;"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            >
              <div
                class="ant-space-item"
              >
                <span
                  class="ant-tag ant-tag-success"
                >
                  <span
                    aria-label="check-circle"
                    class="anticon anticon-check-circle"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="check-circle"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0051.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                      <path
                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                      />
                    </svg>
                  </span>
                  <span>
                    Indexed
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="ant-space-item"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            >
              <div
                class="ant-space-item"
                style="margin-right: 16px;"
              >
                <button
                  class="ant-btn ant-btn-default margin-none"
                  type="button"
                >
                  <span
                    aria-label="sync"
                    class="anticon anticon-sync"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="sync"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M168 504.2c1-43.7 10-86.1 26.9-126 17.3-41 42.1-77.7 73.7-109.4S337 212.3 378 195c42.4-17.9 87.4-27 133.9-27s91.5 9.1 133.8 27A341.5 341.5 0 01755 268.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.7 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c0-6.7-7.7-10.5-12.9-6.3l-56.4 44.1C765.8 155.1 646.2 92 511.8 92 282.7 92 96.3 275.6 92 503.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8zm756 7.8h-60c-4.4 0-7.9 3.5-8 7.8-1 43.7-10 86.1-26.9 126-17.3 41-42.1 77.8-73.7 109.4A342.45 342.45 0 01512.1 856a342.24 342.24 0 01-243.2-100.8c-9.9-9.9-19.2-20.4-27.8-31.4l60.2-47a8 8 0 00-3-14.1l-175.7-43c-5-1.2-9.9 2.6-9.9 7.7l-.7 181c0 6.7 7.7 10.5 12.9 6.3l56.4-44.1C258.2 868.9 377.8 932 512.2 932c229.2 0 415.5-183.7 419.8-411.8a8 8 0 00-8-8.2z"
                      />
                    </svg>
                  </span>
                  <span>
                    Re-Index Documents
                  </span>
                </button>
              </div>
              <div
                class="ant-space-item"
              >
                <span
                  aria-label="question-circle"
                  class="anticon anticon-question-circle info-tooltip icon-sm"
                  role="img"
                  style="color: rgb(94, 70, 161);"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="question-circle"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                    />
                    <path
                      d="M623.6 316.7C593.6 290.4 554 276 512 276s-81.6 14.5-111.6 40.7C369.2 344 352 380.7 352 420v7.6c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V420c0-44.1 43.1-80 96-80s96 35.9 96 80c0 31.1-22 59.6-56.1 72.7-21.2 8.1-39.2 22.3-52.1 40.9-13.1 19-19.9 41.8-19.9 64.9V620c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8v-22.7a48.3 48.3 0 0130.9-44.8c59-22.7 97.1-74.7 97.1-132.5.1-39.3-17.1-76-48.3-103.3zM472 732a40 40 0 1080 0 40 40 0 10-80 0z"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-row-center ant-row-middle"
      >
        <div
          class="ant-col ant-col-xs-24"
          style="max-width: 900px;"
        >
          <div
            class="ant-row"
            style="margin-top: -12px; margin-bottom: -12px;"
          >
            <div
              class="ant-col ant-col-xs-24"
              style="padding-top: 12px; padding-bottom: 12px; text-align: center;"
            >
              <h1
                class="ant-typography"
              >
                Search Application Documents
              </h1>
              <div
                class="ant-typography"
                style="font-size: 16px;"
              >
                Search across all documents submitted with this Notice of Work application and get AI-powered answers. Try searching for specific plans, assessments, or operational details.
              </div>
              <div
                class="ant-typography"
              >
                <div
                  class="ant-alert ant-alert-warning ant-alert-with-description"
                  data-show="true"
                  role="alert"
                >
                  <span
                    aria-label="exclamation-circle"
                    class="anticon anticon-exclamation-circle ant-alert-icon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="exclamation-circle"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                      />
                      <path
                        d="M464 688a48 48 0 1096 0 48 48 0 10-96 0zm24-112h48c4.4 0 8-3.6 8-8V296c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8z"
                      />
                    </svg>
                  </span>
                  <div
                    class="ant-alert-content"
                  >
                    <div
                      class="ant-alert-description"
                    >
                      Note: Spatial files (e.g. shapefiles) are not indexed and will not appear in search results.
                    </div>
                  </div>
                </div>
              </div>
              <div />
            </div>
            <div
              class="ant-col ant-col-xs-24"
              style="padding-top: 12px; padding-bottom: 12px; text-align: center; margin-top: 24px;"
            >
              <h4
                class="ant-typography"
                style="margin-bottom: 32px;"
              >
                Try these example searches
              </h4>
            </div>
          </div>
          <div
            class="ant-row"
            style="margin-top: -12px; margin-bottom: -12px;"
          >
            <div
              class="ant-col ant-col-xs-24 ant-col-sm-12"
              style="margin-bottom: 24px; padding: 0px 20px;"
            >
              <div
                class="ant-card ant-card-bordered ant-card-hoverable"
                style="height: 100%;"
              >
                <div
                  class="ant-card-body"
                  style="height: 100%;"
                >
                  <div
                    class="ant-row"
                    style="margin-top: -8px; margin-bottom: -8px;"
                  >
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 8px; padding-bottom: 8px;"
                    >
                      <div
                        class="ant-row ant-row-middle"
                        style="margin-left: -4px; margin-right: -4px;"
                      >
                        <span
                          aria-label="aim"
                          class="anticon anticon-aim"
                          role="img"
                          style="font-size: 24px;"
                        >
                          <svg
                            aria-hidden="true"
                            class=""
                            data-icon="aim"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <defs>
                              <style />
                            </defs>
                            <path
                              d="M952 474H829.8C812.5 327.6 696.4 211.5 550 194.2V72c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v122.2C327.6 211.5 211.5 327.6 194.2 474H72c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h122.2C211.5 696.4 327.6 812.5 474 829.8V952c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V829.8C696.4 812.5 812.5 696.4 829.8 550H952c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8zM512 756c-134.8 0-244-109.2-244-244s109.2-244 244-244 244 109.2 244 244-109.2 244-244 244z"
                            />
                            <path
                              d="M512 392c-32.1 0-62.1 12.4-84.8 35.2-22.7 22.7-35.2 52.7-35.2 84.8s12.5 62.1 35.2 84.8C449.9 619.4 480 632 512 632s62.1-12.5 84.8-35.2C619.4 574.1 632 544 632 512s-12.5-62.1-35.2-84.8A118.57 118.57 0 00512 392z"
                            />
                          </svg>
                        </span>
                        <div
                          class="ant-col"
                          style="padding-left: 4px; padding-right: 4px;"
                        >
                          <span
                            class="ant-typography"
                          >
                            <strong>
                              Activies & Scope
                            </strong>
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 8px; padding-bottom: 8px;"
                    >
                      <div
                        class="ant-row"
                        style="margin-top: -4px; margin-bottom: -4px;"
                      >
                        <div
                          class="ant-col ant-col-xs-24"
                          style="padding-top: 4px; padding-bottom: 4px;"
                        >
                          <a
                            class="ant-typography permit-search__example-link"
                          >
                            What is the timeline of the proposed activies?
                          </a>
                        </div>
                        <div
                          class="ant-col ant-col-xs-24"
                          style="padding-top: 4px; padding-bottom: 4px;"
                        >
                          <a
                            class="ant-typography permit-search__example-link"
                          >
                            What activites are planned (e.g. drilling, trenching)?
                          </a>
                        </div>
                        <div
                          class="ant-col ant-col-xs-24"
                          style="padding-top: 4px; padding-bottom: 4px;"
                        >
                          <a
                            class="ant-typography permit-search__example-link"
                          >
                            How much land disturbance is proposed?
                          </a>
                        </div>
                        <div
                          class="ant-col ant-col-xs-24"
                          style="padding-top: 4px; padding-bottom: 4px;"
                        >
                          <a
                            class="ant-typography permit-search__example-link"
                          >
                            What approvals, permits or authorizations are identified or may be required?
                          </a>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-xs-24 ant-col-sm-12"
              style="margin-bottom: 24px; padding: 0px 20px;"
            >
              <div
                class="ant-card ant-card-bordered ant-card-hoverable"
                style="height: 100%;"
              >
                <div
                  class="ant-card-body"
                  style="height: 100%;"
                >
                  <div
                    class="ant-row"
                    style="margin-top: -8px; margin-bottom: -8px;"
                  >
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 8px; padding-bottom: 8px;"
                    >
                      <div
                        class="ant-row ant-row-middle"
                        style="margin-left: -4px; margin-right: -4px;"
                      >
                        <span
                          aria-label="environment"
                          class="anticon anticon-environment"
                          role="img"
                          style="font-size: 24px;"
                        >
                          <svg
                            aria-hidden="true"
                            class=""
                            data-icon="environment"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M854.6 289.1a362.49 362.49 0 00-79.9-115.7 370.83 370.83 0 00-118.2-77.8C610.7 76.6 562.1 67 512 67c-50.1 0-98.7 9.6-144.5 28.5-44.3 18.3-84 44.5-118.2 77.8A363.6 363.6 0 00169.4 289c-19.5 45-29.4 92.8-29.4 142 0 70.6 16.9 140.9 50.1 208.7 26.7 54.5 64 107.6 111 158.1 80.3 86.2 164.5 138.9 188.4 153a43.9 43.9 0 0022.4 6.1c7.8 0 15.5-2 22.4-6.1 23.9-14.1 108.1-66.8 188.4-153 47-50.4 84.3-103.6 111-158.1C867.1 572 884 501.8 884 431.1c0-49.2-9.9-97-29.4-142zM512 880.2c-65.9-41.9-300-207.8-300-449.1 0-77.9 31.1-151.1 87.6-206.3C356.3 169.5 431.7 139 512 139s155.7 30.5 212.4 85.9C780.9 280 812 353.2 812 431.1c0 241.3-234.1 407.2-300 449.1zm0-617.2c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm79.2 255.2A111.6 111.6 0 01512 551c-29.9 0-58-11.7-79.2-32.8A111.6 111.6 0 01400 439c0-29.9 11.7-58 32.8-79.2C454 338.6 482.1 327 512 327c29.9 0 58 11.6 79.2 32.8C612.4 381 624 409.1 624 439c0 29.9-11.6 58-32.8 79.2z"
                            />
                          </svg>
                        </span>
                        <div
                          class="ant-col"
                          style="padding-left: 4px; padding-right: 4px;"
                        >
                          <span
                            class="ant-typography"
                          >
                            <strong>
                              Environment & Reclaimation
                            </strong>
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 8px; padding-bottom: 8px;"
                    >
                      <div
                        class="ant-row"
                        style="margin-top: -4px; margin-bottom: -4px;"
                      >
                        <div
                          class="ant-col ant-col-xs-24"
                          style="padding-top: 4px; padding-bottom: 4px;"
                        >
                          <a
                            class="ant-typography permit-search__example-link"
                          >
                            What environmental considerations are identified?
                          </a>
                        </div>
                        <div
                          class="ant-col ant-col-xs-24"
                          style="padding-top: 4px; padding-bottom: 4px;"
                        >
                          <a
                            class="ant-typography permit-search__example-link"
                          >
                            What reclaimation activities are planned?
                          </a>
                        </div>
                        <div
                          class="ant-col ant-col-xs-24"
                          style="padding-top: 4px; padding-bottom: 4px;"
                        >
                          <a
                            class="ant-typography permit-search__example-link"
                          >
                            How will water runoff be managed?
                          </a>
                        </div>
                        <div
                          class="ant-col ant-col-xs-24"
                          style="padding-top: 4px; padding-bottom: 4px;"
                        >
                          <a
                            class="ant-typography permit-search__example-link"
                          >
                            Are any environmental management or monitoring plans included?
                          </a>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-xs-24 ant-col-sm-12"
              style="margin-bottom: 24px; padding: 0px 20px;"
            >
              <div
                class="ant-card ant-card-bordered ant-card-hoverable"
                style="height: 100%;"
              >
                <div
                  class="ant-card-body"
                  style="height: 100%;"
                >
                  <div
                    class="ant-row"
                    style="margin-top: -8px; margin-bottom: -8px;"
                  >
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 8px; padding-bottom: 8px;"
                    >
                      <div
                        class="ant-row ant-row-middle"
                        style="margin-left: -4px; margin-right: -4px;"
                      >
                        <span
                          aria-label="audit"
                          class="anticon anticon-audit"
                          role="img"
                          style="font-size: 24px;"
                        >
                          <svg
                            aria-hidden="true"
                            class=""
                            data-icon="audit"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M296 250c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H296zm184 144H296c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8zm-48 458H208V148h560v320c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V108c0-17.7-14.3-32-32-32H168c-17.7 0-32 14.3-32 32v784c0 17.7 14.3 32 32 32h264c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm440-88H728v-36.6c46.3-13.8 80-56.6 80-107.4 0-61.9-50.1-112-112-112s-112 50.1-112 112c0 50.7 33.7 93.6 80 107.4V764H520c-8.8 0-16 7.2-16 16v152c0 8.8 7.2 16 16 16h352c8.8 0 16-7.2 16-16V780c0-8.8-7.2-16-16-16zM646 620c0-27.6 22.4-50 50-50s50 22.4 50 50-22.4 50-50 50-50-22.4-50-50zm180 266H566v-60h260v60z"
                            />
                          </svg>
                        </span>
                        <div
                          class="ant-col"
                          style="padding-left: 4px; padding-right: 4px;"
                        >
                          <span
                            class="ant-typography"
                          >
                            <strong>
                              Engagement
                            </strong>
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 8px; padding-bottom: 8px;"
                    >
                      <div
                        class="ant-row"
                        style="margin-top: -4px; margin-bottom: -4px;"
                      >
                        <div
                          class="ant-col ant-col-xs-24"
                          style="padding-top: 4px; padding-bottom: 4px;"
                        >
                          <a
                            class="ant-typography permit-search__example-link"
                          >
                            What indigenous engagement has been completed or documented?
                          </a>
                        </div>
                        <div
                          class="ant-col ant-col-xs-24"
                          style="padding-top: 4px; padding-bottom: 4px;"
                        >
                          <a
                            class="ant-typography permit-search__example-link"
                          >
                            Are there any identified cultural or heritage considerations?
                          </a>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-xs-24 ant-col-sm-12"
              style="margin-bottom: 24px; padding: 0px 20px;"
            >
              <div
                class="ant-card ant-card-bordered ant-card-hoverable"
                style="height: 100%;"
              >
                <div
                  class="ant-card-body"
                  style="height: 100%;"
                >
                  <div
                    class="ant-row"
                    style="margin-top: -8px; margin-bottom: -8px;"
                  >
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 8px; padding-bottom: 8px;"
                    >
                      <div
                        class="ant-row ant-row-middle"
                        style="margin-left: -4px; margin-right: -4px;"
                      >
                        <span
                          aria-label="file-search"
                          class="anticon anticon-file-search"
                          role="img"
                          style="font-size: 24px;"
                        >
                          <svg
                            aria-hidden="true"
                            class=""
                            data-icon="file-search"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M688 312v-48c0-4.4-3.6-8-8-8H296c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8zm-392 88c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H296zm144 452H208V148h560v344c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V108c0-17.7-14.3-32-32-32H168c-17.7 0-32 14.3-32 32v784c0 17.7 14.3 32 32 32h272c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm445.7 51.5l-93.3-93.3C814.7 780.7 828 743.9 828 704c0-97.2-78.8-176-176-176s-176 78.8-176 176 78.8 176 176 176c35.8 0 69-10.7 96.8-29l94.7 94.7c1.6 1.6 3.6 2.3 5.6 2.3s4.1-.8 5.6-2.3l31-31a7.9 7.9 0 000-11.2zM652 816c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
                            />
                          </svg>
                        </span>
                        <div
                          class="ant-col"
                          style="padding-left: 4px; padding-right: 4px;"
                        >
                          <span
                            class="ant-typography"
                          >
                            <strong>
                              Operations
                            </strong>
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 8px; padding-bottom: 8px;"
                    >
                      <div
                        class="ant-row"
                        style="margin-top: -4px; margin-bottom: -4px;"
                      >
                        <div
                          class="ant-col ant-col-xs-24"
                          style="padding-top: 4px; padding-bottom: 4px;"
                        >
                          <a
                            class="ant-typography permit-search__example-link"
                          >
                            What equipment and machinery are proposed for the work?
                          </a>
                        </div>
                        <div
                          class="ant-col ant-col-xs-24"
                          style="padding-top: 4px; padding-bottom: 4px;"
                        >
                          <a
                            class="ant-typography permit-search__example-link"
                          >
                            Are there any high-risk activies (e.g. blasting) proposed?
                          </a>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
  </section>
</div>
`;

exports[`NowApplicationDocumentSearch renders splash screen when no results 1`] = `
<div>
  <section
    class="ant-layout permit-search__layout"
  >
    <main
      class="ant-layout-content permit-search__content"
    >
      <div
        class="ant-row ant-row-end"
        style="margin-bottom: 8px;"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
            style="margin-right: 8px;"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            >
              <div
                class="ant-space-item"
              >
                <span
                  class="ant-tag ant-tag-success"
                >
                  <span
                    aria-label="check-circle"
                    class="anticon anticon-check-circle"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="check-circle"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0051.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                      <path
                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                      />
                    </svg>
                  </span>
                  <span>
                    Indexed
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="ant-space-item"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            >
              <div
                class="ant-space-item"
                style="margin-right: 16px;"
              >
                <button
                  class="ant-btn ant-btn-default margin-none"
                  type="button"
                >
                  <span
                    aria-label="sync"
                    class="anticon anticon-sync"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="sync"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M168 504.2c1-43.7 10-86.1 26.9-126 17.3-41 42.1-77.7 73.7-109.4S337 212.3 378 195c42.4-17.9 87.4-27 133.9-27s91.5 9.1 133.8 27A341.5 341.5 0 01755 268.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.7 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c0-6.7-7.7-10.5-12.9-6.3l-56.4 44.1C765.8 155.1 646.2 92 511.8 92 282.7 92 96.3 275.6 92 503.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8zm756 7.8h-60c-4.4 0-7.9 3.5-8 7.8-1 43.7-10 86.1-26.9 126-17.3 41-42.1 77.8-73.7 109.4A342.45 342.45 0 01512.1 856a342.24 342.24 0 01-243.2-100.8c-9.9-9.9-19.2-20.4-27.8-31.4l60.2-47a8 8 0 00-3-14.1l-175.7-43c-5-1.2-9.9 2.6-9.9 7.7l-.7 181c0 6.7 7.7 10.5 12.9 6.3l56.4-44.1C258.2 868.9 377.8 932 512.2 932c229.2 0 415.5-183.7 419.8-411.8a8 8 0 00-8-8.2z"
                      />
                    </svg>
                  </span>
                  <span>
                    Re-Index Documents
                  </span>
                </button>
              </div>
              <div
                class="ant-space-item"
              >
                <span
                  aria-label="question-circle"
                  class="anticon anticon-question-circle info-tooltip icon-sm"
                  role="img"
                  style="color: rgb(94, 70, 161);"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="question-circle"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                    />
                    <path
                      d="M623.6 316.7C593.6 290.4 554 276 512 276s-81.6 14.5-111.6 40.7C369.2 344 352 380.7 352 420v7.6c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V420c0-44.1 43.1-80 96-80s96 35.9 96 80c0 31.1-22 59.6-56.1 72.7-21.2 8.1-39.2 22.3-52.1 40.9-13.1 19-19.9 41.8-19.9 64.9V620c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8v-22.7a48.3 48.3 0 0130.9-44.8c59-22.7 97.1-74.7 97.1-132.5.1-39.3-17.1-76-48.3-103.3zM472 732a40 40 0 1080 0 40 40 0 10-80 0z"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-row-center ant-row-middle"
      >
        <div
          class="ant-col ant-col-xs-24"
          style="max-width: 900px;"
        >
          <div
            class="ant-row"
            style="margin-top: -12px; margin-bottom: -12px;"
          >
            <div
              class="ant-col ant-col-xs-24"
              style="padding-top: 12px; padding-bottom: 12px; text-align: center;"
            >
              <h1
                class="ant-typography"
              >
                Search Application Documents
              </h1>
              <div
                class="ant-typography"
                style="font-size: 16px;"
              >
                Search across all documents submitted with this Notice of Work application and get AI-powered answers. Try searching for specific plans, assessments, or operational details.
              </div>
              <div
                class="ant-typography"
              >
                <div
                  class="ant-alert ant-alert-warning ant-alert-with-description"
                  data-show="true"
                  role="alert"
                >
                  <span
                    aria-label="exclamation-circle"
                    class="anticon anticon-exclamation-circle ant-alert-icon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="exclamation-circle"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                      />
                      <path
                        d="M464 688a48 48 0 1096 0 48 48 0 10-96 0zm24-112h48c4.4 0 8-3.6 8-8V296c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8z"
                      />
                    </svg>
                  </span>
                  <div
                    class="ant-alert-content"
                  >
                    <div
                      class="ant-alert-description"
                    >
                      Note: Spatial files (e.g. shapefiles) are not indexed and will not appear in search results.
                    </div>
                  </div>
                </div>
              </div>
              <div />
            </div>
            <div
              class="ant-col ant-col-xs-24"
              style="padding-top: 12px; padding-bottom: 12px; text-align: center; margin-top: 24px;"
            >
              <h4
                class="ant-typography"
                style="margin-bottom: 32px;"
              >
                Try these example searches
              </h4>
            </div>
          </div>
          <div
            class="ant-row"
            style="margin-top: -12px; margin-bottom: -12px;"
          >
            <div
              class="ant-col ant-col-xs-24 ant-col-sm-12"
              style="margin-bottom: 24px; padding: 0px 20px;"
            >
              <div
                class="ant-card ant-card-bordered ant-card-hoverable"
                style="height: 100%;"
              >
                <div
                  class="ant-card-body"
                  style="height: 100%;"
                >
                  <div
                    class="ant-row"
                    style="margin-top: -8px; margin-bottom: -8px;"
                  >
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 8px; padding-bottom: 8px;"
                    >
                      <div
                        class="ant-row ant-row-middle"
                        style="margin-left: -4px; margin-right: -4px;"
                      >
                        <span
                          aria-label="aim"
                          class="anticon anticon-aim"
                          role="img"
                          style="font-size: 24px;"
                        >
                          <svg
                            aria-hidden="true"
                            class=""
                            data-icon="aim"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <defs>
                              <style />
                            </defs>
                            <path
                              d="M952 474H829.8C812.5 327.6 696.4 211.5 550 194.2V72c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v122.2C327.6 211.5 211.5 327.6 194.2 474H72c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h122.2C211.5 696.4 327.6 812.5 474 829.8V952c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V829.8C696.4 812.5 812.5 696.4 829.8 550H952c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8zM512 756c-134.8 0-244-109.2-244-244s109.2-244 244-244 244 109.2 244 244-109.2 244-244 244z"
                            />
                            <path
                              d="M512 392c-32.1 0-62.1 12.4-84.8 35.2-22.7 22.7-35.2 52.7-35.2 84.8s12.5 62.1 35.2 84.8C449.9 619.4 480 632 512 632s62.1-12.5 84.8-35.2C619.4 574.1 632 544 632 512s-12.5-62.1-35.2-84.8A118.57 118.57 0 00512 392z"
                            />
                          </svg>
                        </span>
                        <div
                          class="ant-col"
                          style="padding-left: 4px; padding-right: 4px;"
                        >
                          <span
                            class="ant-typography"
                          >
                            <strong>
                              Activies & Scope
                            </strong>
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 8px; padding-bottom: 8px;"
                    >
                      <div
                        class="ant-row"
                        style="margin-top: -4px; margin-bottom: -4px;"
                      >
                        <div
                          class="ant-col ant-col-xs-24"
                          style="padding-top: 4px; padding-bottom: 4px;"
                        >
                          <a
                            class="ant-typography permit-search__example-link"
                          >
                            What is the timeline of the proposed activies?
                          </a>
                        </div>
                        <div
                          class="ant-col ant-col-xs-24"
                          style="padding-top: 4px; padding-bottom: 4px;"
                        >
                          <a
                            class="ant-typography permit-search__example-link"
                          >
                            What activites are planned (e.g. drilling, trenching)?
                          </a>
                        </div>
                        <div
                          class="ant-col ant-col-xs-24"
                          style="padding-top: 4px; padding-bottom: 4px;"
                        >
                          <a
                            class="ant-typography permit-search__example-link"
                          >
                            How much land disturbance is proposed?
                          </a>
                        </div>
                        <div
                          class="ant-col ant-col-xs-24"
                          style="padding-top: 4px; padding-bottom: 4px;"
                        >
                          <a
                            class="ant-typography permit-search__example-link"
                          >
                            What approvals, permits or authorizations are identified or may be required?
                          </a>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-xs-24 ant-col-sm-12"
              style="margin-bottom: 24px; padding: 0px 20px;"
            >
              <div
                class="ant-card ant-card-bordered ant-card-hoverable"
                style="height: 100%;"
              >
                <div
                  class="ant-card-body"
                  style="height: 100%;"
                >
                  <div
                    class="ant-row"
                    style="margin-top: -8px; margin-bottom: -8px;"
                  >
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 8px; padding-bottom: 8px;"
                    >
                      <div
                        class="ant-row ant-row-middle"
                        style="margin-left: -4px; margin-right: -4px;"
                      >
                        <span
                          aria-label="environment"
                          class="anticon anticon-environment"
                          role="img"
                          style="font-size: 24px;"
                        >
                          <svg
                            aria-hidden="true"
                            class=""
                            data-icon="environment"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M854.6 289.1a362.49 362.49 0 00-79.9-115.7 370.83 370.83 0 00-118.2-77.8C610.7 76.6 562.1 67 512 67c-50.1 0-98.7 9.6-144.5 28.5-44.3 18.3-84 44.5-118.2 77.8A363.6 363.6 0 00169.4 289c-19.5 45-29.4 92.8-29.4 142 0 70.6 16.9 140.9 50.1 208.7 26.7 54.5 64 107.6 111 158.1 80.3 86.2 164.5 138.9 188.4 153a43.9 43.9 0 0022.4 6.1c7.8 0 15.5-2 22.4-6.1 23.9-14.1 108.1-66.8 188.4-153 47-50.4 84.3-103.6 111-158.1C867.1 572 884 501.8 884 431.1c0-49.2-9.9-97-29.4-142zM512 880.2c-65.9-41.9-300-207.8-300-449.1 0-77.9 31.1-151.1 87.6-206.3C356.3 169.5 431.7 139 512 139s155.7 30.5 212.4 85.9C780.9 280 812 353.2 812 431.1c0 241.3-234.1 407.2-300 449.1zm0-617.2c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm79.2 255.2A111.6 111.6 0 01512 551c-29.9 0-58-11.7-79.2-32.8A111.6 111.6 0 01400 439c0-29.9 11.7-58 32.8-79.2C454 338.6 482.1 327 512 327c29.9 0 58 11.6 79.2 32.8C612.4 381 624 409.1 624 439c0 29.9-11.6 58-32.8 79.2z"
                            />
                          </svg>
                        </span>
                        <div
                          class="ant-col"
                          style="padding-left: 4px; padding-right: 4px;"
                        >
                          <span
                            class="ant-typography"
                          >
                            <strong>
                              Environment & Reclaimation
                            </strong>
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 8px; padding-bottom: 8px;"
                    >
                      <div
                        class="ant-row"
                        style="margin-top: -4px; margin-bottom: -4px;"
                      >
                        <div
                          class="ant-col ant-col-xs-24"
                          style="padding-top: 4px; padding-bottom: 4px;"
                        >
                          <a
                            class="ant-typography permit-search__example-link"
                          >
                            What environmental considerations are identified?
                          </a>
                        </div>
                        <div
                          class="ant-col ant-col-xs-24"
                          style="padding-top: 4px; padding-bottom: 4px;"
                        >
                          <a
                            class="ant-typography permit-search__example-link"
                          >
                            What reclaimation activities are planned?
                          </a>
                        </div>
                        <div
                          class="ant-col ant-col-xs-24"
                          style="padding-top: 4px; padding-bottom: 4px;"
                        >
                          <a
                            class="ant-typography permit-search__example-link"
                          >
                            How will water runoff be managed?
                          </a>
                        </div>
                        <div
                          class="ant-col ant-col-xs-24"
                          style="padding-top: 4px; padding-bottom: 4px;"
                        >
                          <a
                            class="ant-typography permit-search__example-link"
                          >
                            Are any environmental management or monitoring plans included?
                          </a>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-xs-24 ant-col-sm-12"
              style="margin-bottom: 24px; padding: 0px 20px;"
            >
              <div
                class="ant-card ant-card-bordered ant-card-hoverable"
                style="height: 100%;"
              >
                <div
                  class="ant-card-body"
                  style="height: 100%;"
                >
                  <div
                    class="ant-row"
                    style="margin-top: -8px; margin-bottom: -8px;"
                  >
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 8px; padding-bottom: 8px;"
                    >
                      <div
                        class="ant-row ant-row-middle"
                        style="margin-left: -4px; margin-right: -4px;"
                      >
                        <span
                          aria-label="audit"
                          class="anticon anticon-audit"
                          role="img"
                          style="font-size: 24px;"
                        >
                          <svg
                            aria-hidden="true"
                            class=""
                            data-icon="audit"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M296 250c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H296zm184 144H296c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8zm-48 458H208V148h560v320c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V108c0-17.7-14.3-32-32-32H168c-17.7 0-32 14.3-32 32v784c0 17.7 14.3 32 32 32h264c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm440-88H728v-36.6c46.3-13.8 80-56.6 80-107.4 0-61.9-50.1-112-112-112s-112 50.1-112 112c0 50.7 33.7 93.6 80 107.4V764H520c-8.8 0-16 7.2-16 16v152c0 8.8 7.2 16 16 16h352c8.8 0 16-7.2 16-16V780c0-8.8-7.2-16-16-16zM646 620c0-27.6 22.4-50 50-50s50 22.4 50 50-22.4 50-50 50-50-22.4-50-50zm180 266H566v-60h260v60z"
                            />
                          </svg>
                        </span>
                        <div
                          class="ant-col"
                          style="padding-left: 4px; padding-right: 4px;"
                        >
                          <span
                            class="ant-typography"
                          >
                            <strong>
                              Engagement
                            </strong>
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 8px; padding-bottom: 8px;"
                    >
                      <div
                        class="ant-row"
                        style="margin-top: -4px; margin-bottom: -4px;"
                      >
                        <div
                          class="ant-col ant-col-xs-24"
                          style="padding-top: 4px; padding-bottom: 4px;"
                        >
                          <a
                            class="ant-typography permit-search__example-link"
                          >
                            What indigenous engagement has been completed or documented?
                          </a>
                        </div>
                        <div
                          class="ant-col ant-col-xs-24"
                          style="padding-top: 4px; padding-bottom: 4px;"
                        >
                          <a
                            class="ant-typography permit-search__example-link"
                          >
                            Are there any identified cultural or heritage considerations?
                          </a>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-xs-24 ant-col-sm-12"
              style="margin-bottom: 24px; padding: 0px 20px;"
            >
              <div
                class="ant-card ant-card-bordered ant-card-hoverable"
                style="height: 100%;"
              >
                <div
                  class="ant-card-body"
                  style="height: 100%;"
                >
                  <div
                    class="ant-row"
                    style="margin-top: -8px; margin-bottom: -8px;"
                  >
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 8px; padding-bottom: 8px;"
                    >
                      <div
                        class="ant-row ant-row-middle"
                        style="margin-left: -4px; margin-right: -4px;"
                      >
                        <span
                          aria-label="file-search"
                          class="anticon anticon-file-search"
                          role="img"
                          style="font-size: 24px;"
                        >
                          <svg
                            aria-hidden="true"
                            class=""
                            data-icon="file-search"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M688 312v-48c0-4.4-3.6-8-8-8H296c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8zm-392 88c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H296zm144 452H208V148h560v344c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V108c0-17.7-14.3-32-32-32H168c-17.7 0-32 14.3-32 32v784c0 17.7 14.3 32 32 32h272c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm445.7 51.5l-93.3-93.3C814.7 780.7 828 743.9 828 704c0-97.2-78.8-176-176-176s-176 78.8-176 176 78.8 176 176 176c35.8 0 69-10.7 96.8-29l94.7 94.7c1.6 1.6 3.6 2.3 5.6 2.3s4.1-.8 5.6-2.3l31-31a7.9 7.9 0 000-11.2zM652 816c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
                            />
                          </svg>
                        </span>
                        <div
                          class="ant-col"
                          style="padding-left: 4px; padding-right: 4px;"
                        >
                          <span
                            class="ant-typography"
                          >
                            <strong>
                              Operations
                            </strong>
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 8px; padding-bottom: 8px;"
                    >
                      <div
                        class="ant-row"
                        style="margin-top: -4px; margin-bottom: -4px;"
                      >
                        <div
                          class="ant-col ant-col-xs-24"
                          style="padding-top: 4px; padding-bottom: 4px;"
                        >
                          <a
                            class="ant-typography permit-search__example-link"
                          >
                            What equipment and machinery are proposed for the work?
                          </a>
                        </div>
                        <div
                          class="ant-col ant-col-xs-24"
                          style="padding-top: 4px; padding-bottom: 4px;"
                        >
                          <a
                            class="ant-typography permit-search__example-link"
                          >
                            Are there any high-risk activies (e.g. blasting) proposed?
                          </a>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
  </section>
</div>
`;
